Create login Scene and login activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
 
         <activity
             android:name="com.paltales.activities.Home"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name="com.paltales.activities.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
